GNOME Bugzilla – Bug 786018
flatpak: Cannot build flatpak due to cache error: Directory not empty
Last modified: 2017-08-08 23:39:57 UTC
Creating a flatpak from within GNOME Builder for the second time results in: Cache hit for cleanup, skipping Cache hit for finish, skipping Everything cached, checking out from cache (flatpak-builder:16208): flatpak-ERROR **: Failed to check out cache: Fehler beim Entfernen der Datei »/home/jbrummer/.cache/gnome-builder/flatpak/staging/Roger-Router/flatpak:org.gnome.Platform-x86_64-3.24«: Directory not empty [jbrummer@buzz-fedlet flatpak:org.gnome.Platform-x86_64-3.24]$ ls files metadata var
Created attachment 357220 [details] [review] flatpak: echew flatpak-builder for manual build-finish/build-export We were running into errors when using flatpak-builder with --finish-only. Instead, this change takes control of those operations by doing what flatpak-builder would be doing for us. This seems to be more reliable when trying to run export operations a number of times.
Attachment 357220 [details] pushed as f87b2f4 - flatpak: echew flatpak-builder for manual build-finish/build-export