flatpak: echew flatpak-builder for manual build-finish/build-export

We were running into errors when using flatpak-builder with --finish-only.
Instead, this change takes control of those operations by doing what
flatpak-builder would be doing for us. This seems to be more reliable when
trying to run export operations a number of times.

https://bugzilla.gnome.org/show_bug.cgi?id=786018